--- a/Final_Project/stroke_2nd_draft.ipynb
+++ b/Final_Project/stroke_2nd_draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "060c1e2f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7d6c65b8",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dfad40dc",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9772948b",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "3116          Rural             143.33  22.4  formerly smoked       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "90832f79",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8121a100",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2f85f029",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "[3873 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "59e630ff",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4c5c3552",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
        "[247 rows x 12 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d29f2f9a",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
        "max           271.740000   56.600000     1.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "active-stationery",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "collective-minneapolis",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "135"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "magnetic-electron",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "stuck-drama",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "3692a574",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5ce82225",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-16-2c92c3409a27>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-17-2c92c3409a27>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1288,7 +1288,7 @@
        "4       1        75s  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "91399db5",
    "metadata": {},
    "outputs": [
@@ -1566,7 +1566,7 @@
        "[208 rows x 13 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "c2228930",
    "metadata": {},
    "outputs": [
@@ -1589,7 +1589,7 @@
        "29.9"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "16edf031",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1612,7 @@
        "34.1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "39410474",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1634,7 @@
        "32.2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "0d602d21",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1656,7 @@
        "33.2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "67472278",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1678,7 @@
        "30.8"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "b0381641",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1700,7 @@
        "27.9"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "electoral-sapphire",
    "metadata": {},
    "outputs": [],
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "built-singing",
    "metadata": {},
    "outputs": [
@@ -1805,7 +1805,7 @@
        "247       1        65s  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "presidential-direction",
    "metadata": {},
    "outputs": [
@@ -2081,13 +2081,23 @@
        "[3738 rows x 13 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "over_25_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "936580e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "over_25_df.to_csv('over_25_subset.csv', index=False)"
    ]
   },
   {
@@ -3176,7 +3186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
